--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "android",
     "google",
     "googleplay"
-
   ],
   "author": "Ashvin Suthar",
   "license": [
@@ -41,21 +40,21 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "jshint": "~2.9.1",
-    "gulp": "~3.9.0",
-    "gulp-less": "~3.0.5",
-    "gulp-jade": "~1.1.0",
-    "gulp-connect": "~2.3.1",
-    "gulp-open": "~1.0.0",
-    "gulp-uglify": "~1.5.1",
-    "gulp-sourcemaps": "~1.6.0",
-    "gulp-minify-css": "1.2.3",
-    "gulp-jshint": "~2.0.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-header": "~1.7.1",
-    "gulp-tap": "~0.1.3",
-    "jshint-stylish": "~2.1.0"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-header": "^1.8.8",
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-open": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-tap": "^0.1.3",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1"
   },
   "scripts": {
     "test": "gulp test"
